--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     command:
       - "uvicorn"
       - "main:app"
+      - "--host=0.0.0.0"
       - "--port=7000"
       - "--reload"
   rabbitmq:
