--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ anyio==3.6.2
 async-timeout==4.0.2
 billiard==3.6.4.0
 celery==5.2.7
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -18,10 +20,12 @@ pydantic==1.10.2
 pyparsing==3.0.9
 pytz==2022.6
 redis==4.3.4
+requests==2.28.1
 six==1.16.0
 sniffio==1.3.0
 starlette==0.21.0
 typing_extensions==4.4.0
+urllib3==1.26.12
 uvicorn==0.19.0
 vine==5.0.0
 wcwidth==0.2.5
